tests/negative/neg_pr113_duplicate_named_constraint.safe
package neg_PR113_Duplicate_Named_Constraint
   type packet (Kind : character = 'A', Count : integer = 0) is
      record
         value : integer;

   p : packet (Kind = 'A', Kind = 'B') = (value = 1);

